--- a/src/components/SectionOne/SectionOne.scss
+++ b/src/components/SectionOne/SectionOne.scss
@@ -9,7 +9,7 @@
     align-items: center;
     flex-direction: column;
     text-align: center;
-    background-image: url(../src/assets/HeroLogo.png);
+    background-image: url(../../assets/HeroLogo.png);
     background-repeat: no-repeat;
     background-position: center;
 
