--- a/src/components/SectionSeven/SectionSeven.scss
+++ b/src/components/SectionSeven/SectionSeven.scss
@@ -31,14 +31,7 @@
             background-color: #ffffff;
             display: flex;
             justify-content: center;
-            align-content: center;
-            flex-direction: column;
-            background-color: green;
-
-            img {
-                width: 100px;
-                height: 100px;
-            }
+            align-items: center;
         }
     }
 }
