--- a/src/App.scss
+++ b/src/App.scss
@@ -43,7 +43,13 @@ section {
   padding-bottom: 120px;
 }
 
-// .NavBar,
-// .SectionOne {
-//   max-width: 1400px;
-// }
+.NavBar,
+.SectionOne,
+.SectionTwo,
+.SectionThree,
+.SectionFour,
+.SectionFive,
+.SectionSix,
+.SectionSeven {
+  max-width: 1400px;
+}
