--- a/src/components/SectionFour/SectionFour.scss
+++ b/src/components/SectionFour/SectionFour.scss
@@ -86,18 +86,21 @@
         box-shadow: -7px 10px 15px rgba(0, 0, 0, 0.25);
         border-radius: 16px;
         border: none;
-        
-        font-family: 'DM Sans';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 16.25px;
-        line-height: 57px;
-        
-        color: #FFFFFF;
 
         margin-top: 120px;
         left: calc(50% - (291.69px / 2));
 
         cursor: pointer;
+
+        a {
+            text-decoration: none;
+            font-family: 'DM Sans';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 16.25px;
+            line-height: 57px;
+            
+            color: #FFFFFF;
+        }
     }
 }
