--- a/src/components/SectionThree/SectionThree.scss
+++ b/src/components/SectionThree/SectionThree.scss
@@ -44,14 +44,18 @@
         border-radius: 16px;
         border: none;
 
-        font-family: 'DM Sans';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 16.25px;
-        line-height: 23px;
-
-        color: #ffffff;
-
         cursor: pointer;
+
+        a {
+            text-decoration: none;
+            
+            font-family: 'DM Sans';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 16.25px;
+            line-height: 23px;
+
+            color: #ffffff;
+        }
     }
 }
