--- a/src/components/SectionSix/SectionSix.scss
+++ b/src/components/SectionSix/SectionSix.scss
@@ -40,7 +40,7 @@
         height: 56.53px;
         
         
-        background: #3C39C6;
+        background: #EC2E31;
         border: none;
 
         cursor: pointer;
