--- a/src/components/SectionSix/SectionSix.scss
+++ b/src/components/SectionSix/SectionSix.scss
@@ -38,9 +38,8 @@
         
         width: 299px;
         height: 56.53px;
-        
-        
-        background: #EC2E31;
+       
+        background: linear-gradient(180deg, rgba(236, 46, 49, 0.2) 0%, #EC2E31 100%);
         border-radius: 16px;
         border: none;
 
