--- a/src/App.scss
+++ b/src/App.scss
@@ -16,6 +16,7 @@ section {
   background-repeat: no-repeat;
   background-position: center;
   background-position-y: 170px;
+  padding: 20px 0%;
 }
 
 #Section-Three {
@@ -52,4 +53,10 @@ section {
 .SectionSix,
 .SectionSeven {
   max-width: 1400px;
+}
+
+@media only screen and (max-width: 700px) {
+  section {
+    padding: 20px 5% 0px;
+  }
 }
