--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -135,3 +135,27 @@
         }
     }
 }
+
+@media only screen and (max-width: 700px) {
+    #Footer {
+        flex-direction: column;
+        padding: 75px 10%;
+
+        .Content, .Form {
+            width: 100%;
+        }
+
+        .Content {
+            p {
+                width: auto;
+            }
+        }
+
+        .Form {
+            margin-top: 20px;
+            p {
+                width: 100%;
+            }
+        }
+    }
+}
