--- a/src/components/SectionFive/SectionFive.scss
+++ b/src/components/SectionFive/SectionFive.scss
@@ -115,3 +115,12 @@
     }
     
 }
+
+@media only screen and (max-width: 700px) {
+    .SectionFive {
+
+        .GridCard {
+            flex-direction: column;
+        }
+    }
+}
