--- a/src/components/SectionOne/SectionOne.scss
+++ b/src/components/SectionOne/SectionOne.scss
@@ -53,3 +53,16 @@
         }
     }
 }
+
+@media only screen and (max-width: 700px) {
+    .SectionOne {
+        h1, p {
+            width: auto;
+            height: auto;
+        }
+
+        p {
+            margin-top: 40px;
+        }
+    }
+}
