--- a/src/components/SectionSix/SectionSix.scss
+++ b/src/components/SectionSix/SectionSix.scss
@@ -57,3 +57,12 @@
         }
     }
 }
+
+@media only screen and (max-width: 700px) {
+    .SectionSix {
+        h1, p {
+            height: auto;
+            width: auto;
+        }
+    }
+}
