--- a/src/components/SectionThree/SectionThree.scss
+++ b/src/components/SectionThree/SectionThree.scss
@@ -59,3 +59,12 @@
         }
     }
 }
+
+@media only screen and (max-width: 700px) {
+    .SectionThree {
+        h1, p {
+            width: auto;
+            height: auto;
+        }
+    }
+}
